--- a/RelAmb02/RelAmb02.vbproj
+++ b/RelAmb02/RelAmb02.vbproj
@@ -14,6 +14,21 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,6 +62,9 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>iconExp.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="NodaTime, Version=2.4.5.0, Culture=neutral, PublicKeyToken=4226afe0d9b296d1, processorArchitecture=MSIL">
@@ -78,13 +96,14 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.vb">
+    <Compile Include="mainForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="mainForm.Designer.vb">
+      <DependentUpon>mainForm.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="mainModule.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -121,6 +140,90 @@
     </None>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Instructions\0_mainInstr.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Instructions\1_otherInstr.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Instructions\1_otherNeg.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Instructions\1_otherPos.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Instructions\2_practiceAneg.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Instructions\2_practiceApos.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Instructions\3_experimentAneg.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Instructions\3_experimentApos.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Instructions\4_explicitInstr.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Instructions\5_demoInstr.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Instructions\6_endInstr.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BlockRandomisation.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stimuli\experimentPrime_Neg.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stimuli\experimentPrime_Pos.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stimuli\experimentPrime_Str.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stimuli\experimentTarget_Neg.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stimuli\experimentTarget_Pos.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stimuli\practiceOthers.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stimuli\practicePrime_Neg.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stimuli\practicePrime_Pos.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stimuli\practicePrime_Str.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stimuli\practiceTarget_Neg.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stimuli\practiceTarget_Pos.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="iconExp.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
