--- a/RelAmb02/RelAmb02.vbproj
+++ b/RelAmb02/RelAmb02.vbproj
@@ -96,6 +96,24 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="demographicsForm.Designer.vb">
+      <DependentUpon>demographicsForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="demographicsForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="experimentForm.Designer.vb">
+      <DependentUpon>experimentForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="experimentForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="explicitForm.Designer.vb">
+      <DependentUpon>explicitForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="explicitForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="mainForm.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +136,21 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="otherForm.Designer.vb">
+      <DependentUpon>otherForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="otherForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="practiceForm.Designer.vb">
+      <DependentUpon>practiceForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="practiceForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="subjectForm.vb">
+      <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
