Got collect & practice running, still testing exp; implemented explicit, need to check demo & need to write ambi

--- a/RelAmb02/RelAmb02.vbproj
+++ b/RelAmb02/RelAmb02.vbproj
@@ -291,5 +291,8 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\Instructions\3_experimentObjectsApos.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Stimuli\practiceObjects.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
